# terra-project-ll97-dataset

./: .gitignore  LICENSE  README.md  pyproject.toml
terra_project_ll97_dataset/: arguments.py  build_dataset.py
terra_project_ll97_dataset/calculator/: carbon_emissions.py  carbon_emissions_thresholds.py  cost_of_energy.py  energy_unit_conversion.py  penalties.py
terra_project_ll97_dataset/data/: carbon_thresholds_by_building_type.csv
terra_project_ll97_dataset/dataset/: data_cleansing.py  dataset_builder.py
terra_project_ll97_dataset/util/: common.py
